--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.3.23",
+    "@ai-sdk/azure": "^1.3.24",
     "@ai-sdk/react": "^1.2.12",
     "ai": "^4.3.19",
     "next": "15.4.2",
