--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@ai-sdk/azure": "^1.3.24",
     "@ai-sdk/react": "^1.2.12",
+    "@heroui/react": "^2.8.1",
+    "@heroui/theme": "^2.4.19",
     "ai": "^4.3.19",
+    "framer-motion": "^12.23.6",
     "next": "15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
