--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ai-sdk/azure": "^1.3.24",
     "@ai-sdk/react": "^1.2.12",
+    "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.8.1",
     "@heroui/theme": "^2.4.19",
     "ai": "^4.3.19",
